--- a/_config.yml
+++ b/_config.yml
@@ -81,12 +81,12 @@ analytics:
 # Site Author
 author:
   name             : "Elizaveta Pronkina"
-  avatar           : "profile.png"
-  bio              : "PhD Candidate in Economics"
+  avatar           : "EPronkina.png"
+  bio              : "PhD Candidate in Economics
+                      University Carlos III of Madrid"
   location         : "Office 15.1.16, Calle Madrid 126, 
                       Getafe (Madrid), Spain, 28903"
-  employer         : "Department of Economics 
-                      University Carlos III of Madrid"
+  employer         : #"Department of Economics"
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : #"http://yourfullgooglescholarurl.com"
   email            :
