--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,7 +10,7 @@ main:
     url: /teaching/    
     
   - title: "References"
-    url: /references/
+    url: /non-menu-page/
         
 #  - title: "Blog Posts"
 #    url: /year-archive/
