--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Elizaveta Pronkina"
-  avatar           : "EPronkina_profile.JPG"
+  avatar           : "images/EPronkina_profile.JPG"
   bio              : "PhD Candidate in Economics
                       University Carlos III of Madrid"
   location         : "C/Madrid 126, Getafe, Spain"
